# simple-scanner

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json
docs/: HANDOFF.md  api-smoke-testing.md  fmp-setup.md  (+40 more)
services/quant-engine/: alembic.ini  pyproject.toml
services/quant-engine/alembic/: env.py
services/quant-engine/alembic/versions/: 0001_initial.py  0002_phase5_indexes.py  0003_phase6_replay.py  0004_phase7_audit.py  0005_phase8_replay_aware_models.py  0006_phase9_counterfactual_calibration.py  0007_phase10_model_review.py  0008_phase11_research_governance.py  0009_phase13_scheduler.py  0010_phase14_scheduler_worker.py  0011_phase15_fmp_provider.py  0012_phase16_fmp_freshness.py
services/quant-engine/app/: __init__.py  cli.py  config.py  main.py
services/quant-engine/app/api/: routes.py
services/quant-engine/app/backtesting/: audit.py  engine.py  replay.py  sensitivity.py
services/quant-engine/app/data/: fmp.py  provider.py  symbols.py
services/quant-engine/app/db/: repositories.py  schema.py  session.py
services/quant-engine/app/exports/: service.py
services/quant-engine/app/features/: engine.py
services/quant-engine/app/jobs/: scanner.py
services/quant-engine/app/labels/: __init__.py  engine.py
services/quant-engine/app/models/: calibration_audit.py  calibration_drift.py  engine.py  meta_scorer.py  replay_evidence.py
services/quant-engine/app/orchestration/: __init__.py  windowing.py
services/quant-engine/app/quant/: __init__.py  types.py
services/quant-engine/app/regimes/: __init__.py  classifier.py
services/quant-engine/app/schemas/: market.py
services/quant-engine/app/services/: artifact_readiness.py  fmp_pipeline.py  research.py  scheduler.py  workflows.py
services/quant-engine/app/signals/: candidates.py  engine.py  rules.py
services/quant-engine/app/utils/: secrets.py  time.py
services/quant-engine/app/validation/: __init__.py  engine.py
services/quant-engine/tests/: test_exports.py  test_labeling.py  test_migrations.py  test_persisted_api_smoke.py  test_phase13_docs.py  test_repository_parity.py  test_scheduler_api.py  test_secrets.py  test_signals.py  test_symbols.py
services/quant-engine/tests/quant/: conftest.py  test_backtest_validation_model.py  test_candidates.py  test_features_engine.py  test_label_engine.py  test_persistence_workflows.py  test_phase10_orchestration_drift_review.py  test_phase11_research_governance.py  test_phase13_scheduler.py  test_phase14_scheduler_worker.py  test_phase15_fmp_provider.py  test_phase16_fmp_freshness.py  test_phase19_artifact_readiness.py  test_phase9_counterfactual_calibration.py  test_replay_aware_model.py  test_replay_engine.py  test_replay_sensitivity.py  test_scanner_and_provider.py
(+226 files in other folders)
