[project]
name = "adaptive-market-decoder-quant-engine"
version = "0.1.0"
description = "FastAPI quant engine for Adaptive Market Decoder"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.17.2",
  "asyncpg>=0.31.0",
  "duckdb>=1.4.3",
  "fastapi>=0.128.8",
  "httpx>=0.28.1",
  "numpy>=2.3.5",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "polars>=1.36.1",
  "pyarrow>=22.0.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "redis>=7.1.0",
  "sqlalchemy>=2.0.45",
  "uvicorn>=0.38.0",
  "xlsxwriter>=3.2.9"
]

[project.optional-dependencies]
ml = [
  "river>=0.21.2",
  "scikit-learn>=1.6.1",
  "xgboost>=2.1.4"
]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "respx>=0.22.0",
  "ruff>=0.14.9"
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
